hphp/test/zend/good/ext/ldap/tests/ldap_bind_basic.php.skipif
<?hh require_once dirname(__FILE__) .'/skipif.inc';
require_once dirname(__FILE__) .'/skipifbindfailure.inc';