hphp/test/zend/bad/ext/pgsql/tests/80_bug14383.php.skipif
<?php 
require_once(dirname(__FILE__).'/../../dba/tests/skipif.inc');
require_once('skipif.inc');
?>